--- a/src/resources/css/UserProfile.scss
+++ b/src/resources/css/UserProfile.scss
@@ -8,7 +8,7 @@
     text-align: right;
     display: inline-block;
     margin-bottom: 15px;
-    width: 94%;
+    width: 95%;
     font-size: 0.8em;
 
     .headerText {
