--- a/src/resources/css/ViewNavigator.scss
+++ b/src/resources/css/ViewNavigator.scss
@@ -1,6 +1,9 @@
 .viewNavigatorContainer {
-    max-width: 430px;
-    min-width: 277px;
+    position: fixed;
+    top: 56px;
+    left: 0px;
+    width: 100%;
+    height: 100%;
 
     #col1, #col2, #col3 {
         position: fixed;
@@ -22,15 +25,15 @@
     }
 
     #col1 {
-        transform: translate(-100px, 0);
+        transform: translate(-400px, 0);
     }
 
     #col2 {
-        transform: translate(0, 0);
+        transform: translate(0px, 0);
         
     }
 
     #col3 {
-        transform: translate(100px, 0);
+        transform: translate(400px, 0);
     }
 }
