--- a/src/resources/css/gameRequests.scss
+++ b/src/resources/css/gameRequests.scss
@@ -1,6 +1,7 @@
 .gameRequestsContainer {
     margin-bottom: 25px;
     width: 95%;
+    display: inline-block;
 
     .gameRequestGameName {
         margin-bottom: 15px;
